--- a/app/window/src/styles/_sidebar.scss
+++ b/app/window/src/styles/_sidebar.scss
@@ -56,3 +56,11 @@
   font-family: 'Jura', sans-serif;
   font-weight: 500;
 }
+
+#dragbar{
+  background-color: transparent;
+  height: 100%;
+  float: right;
+  width: 5px;
+  cursor: col-resize;
+}
